// Vitest Snapshot v1

exports[`extractLines > should extract lines and not add ellipsis on first and last line 1`] = `
"Line 1
// ...
Line 4
Line 5
Line 6
// ...
Line 10"
`;

exports[`extractLines > should extract lines by range 1`] = `
"...
Line 2
Line 3
Line 4
..."
`;

exports[`extractLines > should extract lines with custom ellipsis 1`] = `
"Line 1
// ...
Line 4
Line 5
Line 6
// ...
Line 8
// ..."
`;

exports[`extractLines > should extract lines with gaps 1`] = `
"Line 1
...
Line 4
Line 5
Line 6
...
Line 8
..."
`;

exports[`extractLines > should extract lines with no ellipsis 1`] = `
"Line 1
Line 4
Line 5
Line 6
Line 8"
`;

exports[`extractLines > should return full content 1`] = `
"Line 1
Line 2
Line 3
Line 4
Line 5
Line 6
Line 7
Line 8
Line 9
Line 10"
`;

exports[`getMarkdown > should get markdown from template 1`] = `
{
  "content": "
Example use of a template.
",
  "data": {
    "name": "Use Template1 with YAML",
  },
}
`;

exports[`list > should list all 1`] = `
[
  {
    "extension": ".md",
    "folder": "glossary",
    "name": "oop",
    "path": {
      "absolute": "single-hyperbook/glossary/oop.md",
      "directory": "",
      "href": "/glossary/oop",
      "relative": "oop.md",
    },
    "root": "single-hyperbook",
  },
  {
    "extension": "",
    "folder": "book",
    "name": ".gitkeep",
    "path": {
      "absolute": "single-hyperbook/book/.gitkeep",
      "directory": "",
      "href": "/.gitkeep",
      "relative": ".gitkeep",
    },
    "root": "single-hyperbook",
  },
  {
    "extension": ".md",
    "folder": "book",
    "name": "paradigms",
    "path": {
      "absolute": "single-hyperbook/book/paradigms.md",
      "directory": "",
      "href": "/paradigms",
      "relative": "paradigms.md",
    },
    "root": "single-hyperbook",
  },
  {
    "extension": ".md",
    "folder": "book",
    "name": "index",
    "path": {
      "absolute": "single-hyperbook/book/index.md",
      "directory": "",
      "href": "/",
      "relative": "index.md",
    },
    "root": "single-hyperbook",
  },
  {
    "extension": ".yml",
    "folder": "book",
    "name": "use-template1",
    "path": {
      "absolute": "single-hyperbook/book/subsection/use-template1.yml",
      "directory": "subsection",
      "href": "/subsection/use-template1",
      "relative": "subsection/use-template1.yml",
    },
    "root": "single-hyperbook",
  },
  {
    "extension": ".md",
    "folder": "book",
    "name": "index",
    "path": {
      "absolute": "single-hyperbook/book/subsection/index.md",
      "directory": "subsection",
      "href": "/subsection",
      "relative": "subsection/index.md",
    },
    "root": "single-hyperbook",
  },
]
`;

exports[`list > should list for folder book 1`] = `
[
  {
    "extension": "",
    "folder": "book",
    "name": ".gitkeep",
    "path": {
      "absolute": "single-hyperbook/book/.gitkeep",
      "directory": "",
      "href": "/.gitkeep",
      "relative": ".gitkeep",
    },
    "root": "single-hyperbook",
  },
  {
    "extension": ".md",
    "folder": "book",
    "name": "paradigms",
    "path": {
      "absolute": "single-hyperbook/book/paradigms.md",
      "directory": "",
      "href": "/paradigms",
      "relative": "paradigms.md",
    },
    "root": "single-hyperbook",
  },
  {
    "extension": ".md",
    "folder": "book",
    "name": "index",
    "path": {
      "absolute": "single-hyperbook/book/index.md",
      "directory": "",
      "href": "/",
      "relative": "index.md",
    },
    "root": "single-hyperbook",
  },
  {
    "extension": ".yml",
    "folder": "book",
    "name": "use-template1",
    "path": {
      "absolute": "single-hyperbook/book/subsection/use-template1.yml",
      "directory": "subsection",
      "href": "/subsection/use-template1",
      "relative": "subsection/use-template1.yml",
    },
    "root": "single-hyperbook",
  },
  {
    "extension": ".md",
    "folder": "book",
    "name": "index",
    "path": {
      "absolute": "single-hyperbook/book/subsection/index.md",
      "directory": "subsection",
      "href": "/subsection",
      "relative": "subsection/index.md",
    },
    "root": "single-hyperbook",
  },
]
`;
